Fri May 23 19:11:37 UTC 2014  Chad Elliott  <elliott_c@ociweb.com>

        * docs/templates/vc10.txt:
        * templates/vc10.mpd:

          Modified to allow the setting of the TargetFrameworkVersion to
          change the TargetFrameworkVersion of managed C++ projects.  Thanks
          to Charles Calkins <calkinsc at ociweb dot com> for bringing this
          to my attention.

Tue May  6 12:32:53 UTC 2014  Chad Elliott  <elliott_c@ociweb.com>

        * docs/templates/vc10.txt:
        * templates/vc10.mpd:

          Added a template variable to allow the user to override the
          default intermediate directory.  Thanks to Craig Miller
          <craigwmiller at yahoo dot com> for providing this patch.

        * docs/templates/vc8csharp.txt:

          Document a missing template variable.

Thu Apr 10 08:26:17 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/nddslib.mpb:
          Set RTI_UNIX on non windows

Thu Apr 10 06:38:25 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/nddslib.mpb:
          Should set RTI_UNIX on linux

Wed Apr  9 13:11:59 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/nddslib.mpb:
          If prop:windows is not set, don't set RTI_UNIX, could be that
          we are on windows using GNU make. If ACE_PLATFORM_CONFIG is
          config-win32.h, we do use -DRTI_WIN32, we are than on Windows

Fri Mar 21 16:32:10 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * config/sqlapi.mpb:
          Added base project for SQLAPI (www.sqlapi.com).

        * docs/templates/make.txt:
        * templates/make.mpd:
          Added a template variable 'default_configuration'.

Sun Mar 16 21:50:26 UTC 2014  James H. Hill  <hillj@cs.iupui.edu>

        * config/pintool.mpb:
          Fixed building pintools on 64-bit Windows machines.

Thu Mar 13 12:05:13 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/pin_base.mpb:
        * config/pintool.mpb: