@@ -1,0 +1,75 @@
+// -*- MPC -*-
+// $Id$
+
+conditional_include "common"
+conditional_include "windowscommon"
+
+configurations     = Debug Release
+common_defines     = WIN32 _WINDOWS _CRT_NONSTDC_NO_WARNINGS
+ConfigurationType  = 2
+MinimalRebuild     = false
+GenerateDebugInformation = true
+
+conditional_include "vc14platforms"
+
+Release {
+  optimize         = MaxSpeed
+  defines          = NDEBUG
+  output_dir       = Release
+  intermediate_dir = Release
+  EnableIntrinsicFunctions = true
+  WholeProgramOptimization = true
+}
+
+Debug {
+  debug_prj        = 1
+  defines          = _DEBUG
+  output_dir       = .
+  intermediate_dir = Debug
+  lib_modifier     = d
+}
+
+Memcheck Release {
+  optimize           = MaxSpeed
+  defines            = NDEBUG
+  output_dir         = Release
+  intermediate_dir   = Release
+  BasicRuntimeChecks = 0
+  FixedBaseAddress   = 1
+  EnableIntrinsicFunctions = true
+  WholeProgramOptimization = true
+}
+
+Memcheck Debug {
+  debug_prj          = 1
+  defines            = _DEBUG
+  output_dir         = .
+  intermediate_dir   = Debug
+  lib_modifier       = d
+  BasicRuntimeChecks = 0
+  LinkIncremental    = 1
+  FixedBaseAddress   = 1
+}
+
+MFC Release {
+  optimize         = MaxSpeed
+  defines          = NDEBUG
+  output_dir       = MFC_Release
+  intermediate_dir = MFC_Release
+  lib_modifier     = mfc
+  UseOfMFC         = Dynamic
+  EnableIntrinsicFunctions = true
+  WholeProgramOptimization = true
+}
+
+MFC Debug {
+  debug_prj        = 1
+  defines          = _DEBUG
+  output_dir       = MFC_Debug
+  intermediate_dir = MFC_Debug
+  lib_modifier     = mfcd
+  UseOfMFC         = Dynamic
+}
+
+conditional_include "vcpartialmacros"
+conditional_include "user_vc14dll"
