@@ -1,0 +1,77 @@
+// -*- MPC -*-
+// $Id$
+
+conditional_include "common"
+conditional_include "windowscommon"
+
+configurations     = Debug Release
+common_defines     = WIN32 _WINDOWS _CRT_NONSTDC_NO_WARNINGS
+ConfigurationType  = 4
+MinimalRebuild     = false
+GenerateDebugInformation = true
+
+conditional_include "vc14platforms"
+
+Release {
+  optimize         = MaxSpeed
+  defines          = NDEBUG
+  output_dir       = Static_Release
+  intermediate_dir = Static_Release
+  lib_modifier     = s
+  EnableIntrinsicFunctions = true
+  WholeProgramOptimization = true
+}
+
+Debug {
+  debug_prj        = 1
+  defines          = _DEBUG
+  output_dir       = Static_Debug
+  intermediate_dir = Static_Debug
+  lib_modifier     = sd
+}
+
+Memcheck Release {
+  optimize           = MaxSpeed
+  defines            = NDEBUG
+  output_dir         = Static_Release
+  intermediate_dir   = Static_Release
+  lib_modifier       = s
+  BasicRuntimeChecks = 0
+  FixedBaseAddress   = 1
+  EnableIntrinsicFunctions = true
+  WholeProgramOptimization = true
+}
+
+Memcheck Debug {
+  debug_prj          = 1
+  defines            = _DEBUG
+  output_dir         = Static_Debug
+  intermediate_dir   = Static_Debug
+  lib_modifier       = sd
+  BasicRuntimeChecks = 0
+  LinkIncremental    = 1
+  FixedBaseAddress   = 1
+}
+
+MFC Release {
+  optimize         = MaxSpeed
+  defines          = NDEBUG
+  output_dir       = Static_MFC_Release
+  intermediate_dir = Static_MFC_Release
+  lib_modifier     = mfcs
+  UseOfMFC         = Dynamic
+  EnableIntrinsicFunctions = true
+  WholeProgramOptimization = true
+}
+
+MFC Debug {
+  debug_prj        = 1
+  defines          = _DEBUG
+  output_dir       = Static_MFC_Debug
+  intermediate_dir = Static_MFC_Debug
+  lib_modifier     = mfcsd
+  UseOfMFC         = Dynamic
+}
+
+conditional_include "vcpartialmacros"
+conditional_include "user_vc14lib"
